manifests/apps/llm-d/deepseek.yaml

---

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: deepseek-insecure-tls
  namespace: llm-d
spec:
  host: deepseek-epp-service
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek
  namespace: llm-d
spec:
  parentRefs:
  - name: llm-d-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.x-k8s.io
      kind: InferencePool
      name: deepseek-inference-pool
      port: 8000
    matches:
    - path:
        type: PathPrefix
        value: /deepseek
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /  
    timeouts:
      backendRequest: 0s
      request: 0s
